admin/estate/index、showページのレイアウト

--- a/app/views/admins/customers/_header.html.erb
+++ b/app/views/admins/customers/_header.html.erb
@@ -14,7 +14,10 @@
           <%= link_to "物件入稿ページへ進む", new_admins_estate_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
         </li>
         <li class="nav-item">
-          <%= link_to "一覧ページへ進む", admins_estates_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+          <%= link_to "物件一覧ページへ進む", admins_estates_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "カスタマー一覧ページへ進む", admins_customers_path, class: "btn-sm btn-outline-secondary", :style=>"font-size: 20px; text-decoration: none;" %>
         </li>
       <% end %>
       </ul>
