--- a/app/views/customers/customers/_header.html.erb
+++ b/app/views/customers/customers/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="sticky-top shadow-sm">
+<header class="sticky-top shadow-sm" style="width: 100%;">
   <nav class="navbar navbar-expand-xs navbar-light">
     <a class="navbar-brand p-0" href="/"><%= image_tag('logo1.jpg') %></a>
 
