--- a/app/views/customers/researches/new.html.erb
+++ b/app/views/customers/researches/new.html.erb
@@ -12,7 +12,7 @@
         <div class="col-2 text-center"><%= f.label :本文 %></div>
         <div class="col-1"><%= f.text_area :body, placeholder:"コメントをご入力ください。", :size=>"100x10" %></div>
       </div>
-      <div class="row justify-content-center pb-5"><%= f.submit "お問い合わせ", class: "search" %></div>
+      <div class="row justify-content-center pb-5"><%= f.submit "お問い合わせする", class: "search" %></div>
       <div class="row">
         <div class="col-9 text-right" style="padding-top: 60px;">
           <p>お問い合わせするにはログインが必要です。<br/>会員登録済みの方はログインへ→</p>
