--- a/app/views/admins/estates/show.html.erb
+++ b/app/views/admins/estates/show.html.erb
@@ -4,7 +4,7 @@
    <%= @estates.name %>　<%= @estates.room_number %>号室のお問い合わせ一覧
 </div>
 
-<div class="container">
+<div class="container" style="margin-bottom: 50px;">
   <% if @researches.present? %>
     <% @researches.reverse.each do |research| %>
       <div class="card shadow" style="margin-bottom: 50px; height: auto;">
@@ -45,5 +45,7 @@
     <div class="text-center pt-5">お問い合わせはありません。</div>
   <% end %>
 </div>
+
+<%= paginate @researches %>
 
 <%= render "admins/customers/footer" %>
