--- a/app/views/customers/customers/show.html.erb
+++ b/app/views/customers/customers/show.html.erb
@@ -36,30 +36,32 @@
 <div class="text-center pt-5 pb-5" style="font-size: 30px; font-weight: bold;">お気に入り物件一覧</div>
 <div class="container">
   <% if @favorites.present? %>
-    <% @favorites.each do |favorite| %>
-      <table class="card shadow" style="margin-bottom: 30px;">
-        <tr>
-          <td><%= link_to attachment_image_tag(favorite.estate, :background_image, format: 'jpeg', size: "300x300"), estate_path(favorite), {class: "image-top"} %></td>
-          <td>
-            <table class="table table-striped" style="margin-left: 110px;">
+    <% @favorites.reverse.each do |favorite| %>
+      <div class="card shadow" style="margin-bottom: 30px;">
+        <div class="row">
+          <div class="col-md-3 col-sm-12">
+            <%= link_to attachment_image_tag(favorite.estate, :background_image, format: 'jpeg', size: "317x320"), estate_path(favorite), {class: "image-top"} %>
+          </div>
+          <div class="col-md-9 col-sm-12 pl-5">
+            <table class="table table-striped">
               <tr>
-                <td>物件名</td>
-                <td><%= favorite.estate.name %>　<%= favorite.estate.room_number %>号室</td>
+                <th class="th" style="width: 20%;">物件名</th>
+                <td class="name"><%= favorite.estate.name %>　<%= favorite.estate.room_number %>号室</td>
               </tr>
               <tr>
-                <td>住所</td>
-                <td><%= favorite.estate.address %></td>
+                <th>住所</th>
+                <td class="address"><%= favorite.estate.address %></td>
               </tr>
               <tr>
-                <td>賃料</td>
-              　<td>¥<%= favorite.estate.price.to_s(:delimited) %></td>
+                <th>賃料</th>
+                <td>¥<%= favorite.estate.price.to_s(:delimited) %></td>
               </tr>
               <tr>
-                <td>間取り</td>
-              　<td><%= favorite.estate.floor %></td>
+                <th>間取り</th>
+                <td><%= favorite.estate.floor %></td>
               </tr>
               <tr>
-                <td>お気に入り数</td>
+                <th>お気に入り数</th>
                 <td>
                   <% if favorite.estate.favorited_by?(current_customer) %>
                     <%= link_to estate_favorites_path(favorite.estate), method: :delete, style: "font-size:22px" do %>
@@ -69,65 +71,71 @@
                 </td>
               </tr>
               <tr>
-                <td>お気に入りした日時</td>
+                <th>お気に入りした日時</th>
                 <td><%= favorite.created_at.strftime('%Y年%m月%d日 %H時%M分') %></td>
               </tr>
             </table>
-          </td>
-        </tr>
-      </table>
+          </div>
+        </div>
+      </div>
     <% end %>
   <% else %>
     <div class="text-center" style="padding: 30px 0 50px 0;">いいねされた物件はありません。</div>
   <% end %>
 </div>
 
-
-<div class="text-center" style="padding: 30px 0 80px 0; font-size: 30px; font-weight: bold;">お問い合わせ物件一覧</div>
+<div class="text-center" style="padding: 30px 0 50px 0; font-size: 30px; font-weight: bold;">お問い合わせ物件一覧</div>
 <div class="container">
   <% if @researches.present? %>
     <% @researches.each do |research| %>
-      <table class="card shadow" style="margin-bottom: 30px;">
-        <tr>
-          <td><%= link_to attachment_image_tag(research.estate, :background_image, format: 'jpeg', size: "300x300"), estate_path(research), {class: "image-top"} %></td>
-          <td>
-            <table class="table table-striped" style="margin-left: 110px;">
+      <div class="card shadow" style="margin-bottom: 30px; height: auto;">
+        <div class="row">
+          <div class="col-md-3 col-sm-12">
+            <%= link_to attachment_image_tag(research.estate, :background_image, format: 'jpeg', size: "317x320"), estate_path(research), {class: "image-top"} %>
+          </div>
+          <div class="col-md-9 col-sm-12 pl-5">
+            <table class="table table-striped">
               <tr>
-                <td>物件名</td>
-                <td><%= research.estate.name %>　<%= research.estate.room_number %>号室</td>
+                <th class="th" style="width: 20%;">物件名</th>
+                <td class="name"><%= research.estate.name %>　<%= research.estate.room_number %>号室</td>
               </tr>
               <tr>
-                <td>住所</td>
-                <td><%= research.estate.address %></td>
+                <th>住所</th>
+                <td class="address"><%= research.estate.address %></td>
               </tr>
               <tr>
-                <td>賃料</td>
-              　<td>¥<%= research.estate.price.to_s(:delimited) %></td>
+                <th>賃料</th>
+                <td>¥<%= research.estate.price.to_s(:delimited) %></td>
               </tr>
               <tr>
-                <td>間取り</td>
-              　<td><%= research.estate.floor %></td>
+                <th>間取り</th>
+                <td><%= research.estate.floor %></td>
+              </tr>
+              <tr>
+                <th>お問い合わせした日時</th>
+                <td><%= research.created_at.strftime('%Y年%m月%d日 %H時%M分') %></td>
               </tr>
             </table>
-          </td>
-        </tr>
-        <tr>
-          <td class="title text-center" style="padding-bottom: 35px; font-weight: bold;">お問い合わせタイトル</td>
-          <td class="card" style="width: 100%; height: 80px; margin: 50px 0 30px 110px;"><%= research.title %></td>
-        </tr>
-        <tr>
-          <td class="body text-center" style="padding-bottom: 300px; font-weight: bold;">お問い合わせ本文</td>
-          <td class="card" style="width: 100%; height: 300px; margin: 0 0 30px 110px;"><%= research.body %></td>
-        </tr>
-        <tr>
-          <td class="created text-center" style="padding-bottom: 30px; font-weight: bold;">お問い合わせした日時</td>
-          <td class="card" style="width: 100%; margin: 0 0 30px 110px;"><%= research.created_at.strftime('%Y年%m月%d日 %H時%M分') %></td>
-        </tr>
-      </table>
+          </div>
+        </div>
+        <div class="row pt-4 pb-4">
+          <div class="col-2 mr-5 text-right" style="font-weight: bold;">お問い合わせ内容</div>
+          <div class="card col-9">
+            <div><%= research.title %></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-2 mr-5"></div>
+          <div class="card col-9 mb-4">
+            <div><%= research.body %></div>
+          </div>
+        </div>
+      </div>
     <% end %>
   <% else %>
     <div class="text-center">お問い合わせされた物件はありません。</div>
   <% end %>
 </div>
+<%= paginate @researches %>
 
 <%= render "customers/customers/footer" %>
