--- a/app/views/customers/estates/_article.html.erb
+++ b/app/views/customers/estates/_article.html.erb
@@ -5,17 +5,17 @@
         <div class="card-img-top">
           <%= link_to attachment_image_tag(estates.first, :background_image, format: 'jpeg', size: "348x200"), estate_path(estates.first) %>
         </div>
-        <div class="card-title" style="padding: 10px 0 0 10px;">
-          <%= estates.first.name %>　<%= estates.first.room_number %>号室
-        </div>
-        <div class="card-body" style="padding: 10px 0 0 10px;">
-          <div class="row justify-content-start">
-            <div class="col-2 address">住所</div>
-            <div class="col-10 address"><%= estates.first.address %></div>
+        <div class="card-body" style="padding: 10px 0 0 8px;">
+          <div class="card-title">
+            <%= estates.first.name %>　<%= estates.first.room_number %>号室
+          </div>
+          <div class="card-text">
+            <%= estates.first.address %>
           </div><br>
-          <div>間取り　<%= estates.first.floor %></div><br>
-          <div>賃料　¥<%= estates.first.price.to_s(:delimited) %></div><br>
-          <div>投稿日時　<%= estates.first.created_at.strftime('%Y年%m月%d日 %H時%M分') %></div><br>
+          <div>賃料：¥<%= estates.first.price.to_s(:delimited) %>　間取り：<%= estates.first.floor %></div><br>
+        </div>
+        <div class="card-footer" style="padding-left: 8px;">
+          <small class="text-muted">投稿日時　<%= estates.first.created_at.strftime('%Y年%m月%d日 %H時%M分') %></small>
         </div>
       </div>
     </div>
@@ -25,17 +25,17 @@
         <div class="card-img-top">
           <%= link_to attachment_image_tag(estates.second, :background_image, format: 'jpeg', size: "348x200"), estate_path(estates.second) %>
         </div>
-        <div class="card-title" style="padding: 10px 0 0 10px;">
-          <%= estates.second.name %>　<%= estates.second.room_number %>号室
-        </div>
-        <div class="card-body" style="padding: 10px 0 0 10px;">
-          <div class="row justify-content-start">
-            <div class="col-2 address">住所</div>
-            <div class="col-10 address"><%= estates.second.address %></div>
+        <div class="card-body" style="padding: 10px 0 0 8px;">
+          <div class="card-title">
+            <%= estates.second.name %>　<%= estates.second.room_number %>号室
+          </div>
+          <div class="card-text">
+            <%= estates.second.address %>
           </div><br>
-          <div>間取り　<%= estates.second.floor %></div><br>
-          <div>賃料　¥<%= estates.second.price.to_s(:delimited) %></div><br>
-          <div>投稿日時　<%= estates.second.created_at.strftime('%Y年%m月%d日 %H時%M分') %></div><br>
+          <div>賃料：¥<%= estates.second.price.to_s(:delimited) %>　間取り：<%= estates.second.floor %></div><br>
+        </div>
+        <div class="card-footer" style="padding-left: 8px;">
+          <small class="text-muted">投稿日時　<%= estates.second.created_at.strftime('%Y年%m月%d日 %H時%M分') %></small>
         </div>
       </div>
     </div>
@@ -45,17 +45,17 @@
         <div class="card-img-top">
           <%= link_to attachment_image_tag(estates.third, :background_image, format: 'jpeg', size: "348x200"), estate_path(estates.third) %>
         </div>
-        <div class="card-title" style="padding: 10px 0 0 10px;">
-          <%= estates.third.name %>　<%= estates.third.room_number %>号室
-        </div>
-        <div class="card-body" style="padding: 10px 0 0 10px;">
-          <div class="row justify-content-start">
-            <div class="col-2 address">住所</div>
-            <div class="col-10 address"><%= estates.third.address %></div>
+        <div class="card-body" style="padding: 10px 0 0 8px;">
+          <div class="card-title">
+            <%= estates.third.name %>　<%= estates.third.room_number %>号室
+          </div>
+          <div class="card-text">
+            <%= estates.third.address %>
           </div><br>
-          <div>間取り　<%= estates.third.floor %></div><br>
-          <div>賃料　¥<%= estates.third.price.to_s(:delimited) %></div><br>
-          <div>投稿日時　<%= estates.third.created_at.strftime('%Y年%m月%d日 %H時%M分') %></div><br>
+          <div>賃料：¥<%= estates.third.price.to_s(:delimited) %>　間取り：<%= estates.third.floor %></div><br>
+        </div>
+        <div class="card-footer" style="padding-left: 8px;">
+          <small class="text-muted">投稿日時　<%= estates.third.created_at.strftime('%Y年%m月%d日 %H時%M分') %></small>
         </div>
       </div>
     </div>
@@ -69,17 +69,17 @@
         <div class="card-img-top">
           <%= link_to attachment_image_tag(estates.fourth, :background_image, format: 'jpeg', size: "348x200"), estate_path(estates.fourth) %>
         </div>
-        <div class="card-title" style="padding: 10px 0 0 10px;">
-          <%= estates.fourth.name %>　<%= estates.fourth.room_number %>号室
-        </div>
-        <div class="card-body" style="padding: 10px 0 0 10px;">
-          <div class="row justify-content-start">
-            <div class="col-2 address">住所</div>
-            <div class="col-10 address"><%= estates.fourth.address %></div>
+        <div class="card-body" style="padding: 10px 0 0 8px;">
+          <div class="card-title">
+            <%= estates.fourth.name %>　<%= estates.fourth.room_number %>号室
+          </div>
+          <div class="card-text">
+            <%= estates.fourth.address %>
           </div><br>
-          <div>間取り　<%= estates.fourth.floor %></div><br>
-          <div>賃料　¥<%= estates.fourth.price.to_s(:delimited) %></div><br>
-          <div>投稿日時　<%= estates.fourth.created_at.strftime('%Y年%m月%d日 %H時%M分') %></div><br>
+          <div>賃料：¥<%= estates.fourth.price.to_s(:delimited) %>　間取り：<%= estates.fourth.floor %></div><br>
+        </div>
+        <div class="card-footer" style="padding-left: 8px;">
+          <small class="text-muted">投稿日時　<%= estates.fourth.created_at.strftime('%Y年%m月%d日 %H時%M分') %></small>
         </div>
       </div>
     </div>
@@ -89,17 +89,17 @@
         <div class="card-img-top">
           <%= link_to attachment_image_tag(estates.fifth, :background_image, format: 'jpeg', size: "348x200"), estate_path(estates.fifth) %>
         </div>
-        <div class="card-title" style="padding: 10px 0 0 10px;">
-          <%= estates.fifth.name %>　<%= estates.fifth.room_number %>号室
-        </div>
-        <div class="card-body" style="padding: 10px 0 0 10px;">
-          <div class="row justify-content-start">
-            <div class="col-2 address">住所</div>
-            <div class="col-10 address"><%= estates.fifth.address %></div>
+        <div class="card-body" style="padding: 10px 0 0 8px;">
+          <div class="card-title">
+            <%= estates.fifth.name %>　<%= estates.fifth.room_number %>号室
+          </div>
+          <div class="card-text">
+            <%= estates.fifth.address %>
           </div><br>
-          <div>間取り　<%= estates.fifth.floor %></div><br>
-          <div>賃料　¥<%= estates.fifth.price.to_s(:delimited) %></div><br>
-          <div>投稿日時　<%= estates.fifth.created_at.strftime('%Y年%m月%d日 %H時%M分') %></div><br>
+          <div>賃料：¥<%= estates.fifth.price.to_s(:delimited) %>　間取り：<%= estates.fifth.floor %></div><br>
+        </div>
+        <div class="card-footer" style="padding-left: 8px;">
+          <small class="text-muted">投稿日時　<%= estates.fifth.created_at.strftime('%Y年%m月%d日 %H時%M分') %></small>
         </div>
       </div>
     </div>
@@ -109,16 +109,16 @@
         <div class="card-img-top">
           <%= link_to attachment_image_tag(estates.last, :background_image, format: 'jpeg', size: "348x200"), estate_path(estates.last) %>
         </div>
-        <div class="card-title" style="padding: 10px 0 0 10px;">
-          <%= estates.last.name %>　<%= estates.last.room_number %>号室
-        </div>
-        <div class="card-body" style="padding: 10px 0 0 10px;">
-          <div class="row justify-content-start">
-            <div class="col-2 address">住所</div>
-            <div class="col-10 address"><%= estates.last.address %></div>
+        <div class="card-body" style="padding: 10px 0 0 8px;">
+          <div class="card-title">
+            <%= estates.last.name %>　<%= estates.last.room_number %>号室
+          </div>
+          <div class="card-text">
+            <%= estates.last.address %>
           </div><br>
-          <div>間取り　<%= estates.last.floor %></div><br>
-          <div>賃料　¥<%= estates.last.price.to_s(:delimited) %></div><br>
+          <div>賃料：¥<%= estates.last.price.to_s(:delimited) %>　間取り：<%= estates.last.floor %></div><br>
+        </div>
+        <div class="card-footer" style="padding-left: 8px;">
           <small class="text-muted">投稿日時　<%= estates.last.created_at.strftime('%Y年%m月%d日 %H時%M分') %></small>
         </div>
       </div>
