--- a/app/views/customers/estates/index.html.erb
+++ b/app/views/customers/estates/index.html.erb
@@ -1,39 +1,40 @@
 <%= render "customers/customers/header" %>
-<div class="container" style="padding-top: 180px;">
-<div class="row">
-  <% @estates.each do |estate| %>
-    <div class="col-4">
-      <div class="card mb-4" style="height:550px;">
-        <div class="card-img-top">
-          <%= link_to attachment_image_tag(estate, :background_image, format: 'jpeg', size: "348x200"), estate_path(estate) %>
-        </div>
-        <div class="card-title" style="padding: 10px 0 0 10px;">
-          <%= estate.name %>　<%= estate.room_number %>号室
-        </div>
-        <div class="card-body" style="padding: 10px 0 0 10px;">
-          <div class="row justify-content-start">
-            <div class="col-2 address">住所</div>
-            <div class="col-10 address"><%= estate.address %></div>
-          </div><br>
-          <div>間取り　<%= estate.floor %></div><br>
-          <div>賃料　¥<%= estate.price.to_s(:delimited) %></div><br>
-          <div>お気に入り
-          <% if estate.favorited_by?(current_customer) %>
-            <%= link_to estate_favorites_path(estate), method: :delete, style: "font-size: 22px;" do %>
-            <i class="fas fa-building"></i><%= estate.favorites.count %>
+<div class="container" style="padding-top: 180px; margin-bottom: 50px;">
+  <div class="row">
+    <% @estates.each do |estate| %>
+      <div class="col-4">
+        <div class="card mb-4" style="height:550px;">
+          <div class="card-img-top">
+            <%= link_to attachment_image_tag(estate, :background_image, format: 'jpeg', size: "348x200"), estate_path(estate) %>
+          </div>
+          <div class="card-body" style="padding: 10px 0 0 8px;">
+            <div class="card-title">
+              <%= estate.name %>　<%= estate.room_number %>号室
+            </div>
+            <div class="card-text">
+              <%= estate.address %>
+            </div><br>
+            <div>賃料：¥<%= estate.price.to_s(:delimited) %>　間取り：<%= estate.floor %></div><br>
+            <div>
+            <% if estate.favorited_by?(current_customer) %>
+              <%= link_to estate_favorites_path(estate), method: :delete, style: "font-size: 22px;" do %>
+              <i class="fas fa-building"></i><%= estate.favorites.count %>
+              <% end %>
+            <% else %>
+              <%= link_to estate_favorites_path(estate), method: :post, style: "font-size: 22px;" do %>
+              <i class="far fa-building"></i><%= estate.favorites.count %>
+              <% end %>
             <% end %>
-          <% else %>
-            <%= link_to estate_favorites_path(estate), method: :post, style: "font-size: 22px;" do %>
-            <i class="far fa-building"></i><%= estate.favorites.count %>
-            <% end %>
-          <% end %>
-          </div><br>
-          <small class="text-muted">投稿日時　<%= estate.created_at.strftime('%Y年%m月%d日 %H時%M分') %></small>
+            </div>
+          </div>
+          <div class="card-footer" style="padding-left: 8px;">
+            <small class="text-muted">投稿日時　<%= estate.created_at.strftime('%Y年%m月%d日 %H時%M分') %></small>
+          </div>
         </div>
       </div>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 </div>
-</div>
+
 <%= paginate @estates %>
 <%= render "customers/customers/footer" %>
