--- a/app/views/customers/estates/show.html.erb
+++ b/app/views/customers/estates/show.html.erb
@@ -1,6 +1,6 @@
 <%= render "customers/customers/header" %>
-<%= attachment_image_tag @estate, :background_image, format: 'jpeg', size: "1425x800" %>
-<div class="container">
+<%= attachment_image_tag @estate, :background_image, format: 'jpeg', width: "100%;", heigth: "10%;" %>
+<div class="container" style="margin-bottom: 50px;">
   <div class="text-center" style="padding: 80px 0 80px 0; font-size: 30px; font-weight: bold;">
     <%= @estate.name %>　<%= @estate.room_number %>号室
   </div>
@@ -17,7 +17,7 @@
       </div><br>
       <div>間取り　<%= @estate.floor %></div><br>
       <div>賃料　¥<%= @estate.price.to_s(:delimited) %></div><br>
-      <div>お気に入り
+      <div>
       <% if @estate.favorited_by?(current_customer) %>
         <%= link_to estate_favorites_path(@estate), method: :delete, style: "font-size:22px" do %>
         <i class="fas fa-building"></i><%= @estate.favorites.count %>
@@ -37,38 +37,38 @@
   </div>
 
   <div class="text-center" style="padding: 100px 0;">
-    <%= link_to "お問い合わせする", new_estate_research_path(@estate), class: "search btn-sm btn-outline-secondary", :style=>"text-decoration: none; padding: 20px 60px;" %>
+    <%= link_to "お問い合わせ", new_estate_research_path(@estate), class: "search btn-sm btn-outline-secondary", :style=>"text-decoration: none; padding: 20px 60px;" %>
   </div>
 
   <div class="row mb-1">
     <div class="col-4">
       <button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-1">
-        <%= attachment_image_tag @estate, :property_image_a, format: 'jpeg', size: "400x400" %>
+        <%= attachment_image_tag @estate, :property_image_a, format: 'jpeg', size: "350x350" %>
       </button>
       <div class="modal fade text-center m-3" id="myModal-1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <%= attachment_image_tag @estate, :property_image_a, format: 'jpeg', size: "1300x650" %>
+        <%= attachment_image_tag @estate, :property_image_a, format: 'jpeg', size: "1400x550" %>
         <div class="modal-dialog" role="document"></div>
-        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
       </div>
     </div>
     <div class="col-4">
       <button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-2">
-        <%= attachment_image_tag @estate, :property_image_b, format: 'jpeg', size: "400x400" %>
+        <%= attachment_image_tag @estate, :property_image_b, format: 'jpeg', size: "350x350" %>
       </button>
-      <div class="modal fade text-center m-5" id="myModal-2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <%= attachment_image_tag @estate, :property_image_b, format: 'jpeg', size: "1300x650" %>
+      <div class="modal fade text-center m-3" id="myModal-2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <%= attachment_image_tag @estate, :property_image_b, format: 'jpeg', size: "1400x550" %>
         <div class="modal-dialog" role="document"></div>
-        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
       </div>
     </div>
     <div class="col-4">
       <button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-3">
-        <%= attachment_image_tag @estate, :property_image_c, format: 'jpeg', size: "400x400" %>
+        <%= attachment_image_tag @estate, :property_image_c, format: 'jpeg', size: "350x350" %>
       </button>
       <div class="modal fade text-center m-3" id="myModal-3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <%= attachment_image_tag @estate, :property_image_c, format: 'jpeg', size: "1300x650" %>
+        <%= attachment_image_tag @estate, :property_image_c, format: 'jpeg', size: "1400x550" %>
         <div class="modal-dialog" role="document"></div>
-        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
       </div>
     </div>
   </div>
@@ -76,32 +76,32 @@
   <div class="row mb-1">
     <div class="col-4">
       <button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-4">
-        <%= attachment_image_tag @estate, :property_image_d, format: 'jpeg', size: "400x400" %>
+        <%= attachment_image_tag @estate, :property_image_d, format: 'jpeg', size: "350x350" %>
       </button>
       <div class="modal fade text-center m-3" id="myModal-4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <%= attachment_image_tag @estate, :property_image_d, format: 'jpeg', size: "1300x650" %>
+        <%= attachment_image_tag @estate, :property_image_d, format: 'jpeg', size: "1400x550" %>
         <div class="modal-dialog" role="document"></div>
-        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
       </div>
     </div>
     <div class="col-4">
       <button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-5">
-        <%= attachment_image_tag @estate, :property_image_e, format: 'jpeg', size: "400x400" %>
+        <%= attachment_image_tag @estate, :property_image_e, format: 'jpeg', size: "350x350" %>
       </button>
       <div class="modal fade text-center m-3" id="myModal-5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <%= attachment_image_tag @estate, :property_image_e, format: 'jpeg', size: "1300x650" %>
+        <%= attachment_image_tag @estate, :property_image_e, format: 'jpeg', size: "1400x550" %>
         <div class="modal-dialog" role="document"></div>
-        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
       </div>
     </div>
     <div class="col-4">
       <button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-6">
-        <%= attachment_image_tag @estate, :property_image_f, format: 'jpeg', size: "400x400" %>
+        <%= attachment_image_tag @estate, :property_image_f, format: 'jpeg', size: "350x350" %>
       </button>
       <div class="modal fade text-center m-3" id="myModal-6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <%= attachment_image_tag @estate, :property_image_f, format: 'jpeg', size: "1300x650" %>
+        <%= attachment_image_tag @estate, :property_image_f, format: 'jpeg', size: "1400x550" %>
         <div class="modal-dialog" role="document"></div>
-        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
       </div>
     </div>
   </div>
@@ -109,32 +109,32 @@
   <div class="row mb-1">
     <div class="col-4">
       <button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-7">
-        <%= attachment_image_tag @estate, :property_image_g, format: 'jpeg', size: "400x400" %>
+        <%= attachment_image_tag @estate, :property_image_g, format: 'jpeg', size: "350x350" %>
       </button>
       <div class="modal fade text-center m-3" id="myModal-7" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <%= attachment_image_tag @estate, :property_image_g, format: 'jpeg', size: "1300x650" %>
+        <%= attachment_image_tag @estate, :property_image_g, format: 'jpeg', size: "1400x550" %>
         <div class="modal-dialog" role="document"></div>
-        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
       </div>
     </div>
     <div class="col-4">
       <button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-8">
-        <%= attachment_image_tag @estate, :property_image_h, format: 'jpeg', size: "400x400" %>
+        <%= attachment_image_tag @estate, :property_image_h, format: 'jpeg', size: "350x350" %>
       </button>
       <div class="modal fade text-center m-3" id="myModal-8" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <%= attachment_image_tag @estate, :property_image_h, format: 'jpeg', size: "1300x650" %>
+        <%= attachment_image_tag @estate, :property_image_h, format: 'jpeg', size: "1400x550" %>
         <div class="modal-dialog" role="document"></div>
-        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
       </div>
     </div>
     <div class="col-4">
       <button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-9">
-        <%= attachment_image_tag @estate, :property_image_i, format: 'jpeg', size: "400x400" %>
+        <%= attachment_image_tag @estate, :property_image_i, format: 'jpeg', size: "350x350" %>
       </button>
       <div class="modal fade text-center m-3" id="myModal-9" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <%= attachment_image_tag @estate, :property_image_i, format: 'jpeg', size: "1300x650" %>
+        <%= attachment_image_tag @estate, :property_image_i, format: 'jpeg', size: "1400x550" %>
         <div class="modal-dialog" role="document"></div>
-        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
       </div>
     </div>
   </div>
@@ -142,32 +142,32 @@
   <div class="row mb-1">
     <div class="col-4">
       <button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-10">
-        <%= attachment_image_tag @estate, :property_image_j, format: 'jpeg', size: "400x400" %>
+        <%= attachment_image_tag @estate, :property_image_j, format: 'jpeg', size: "350x350" %>
       </button>
       <div class="modal fade text-center m-3" id="myModal-10" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <%= attachment_image_tag @estate, :property_image_j, format: 'jpeg', size: "1300x650" %>
+        <%= attachment_image_tag @estate, :property_image_j, format: 'jpeg', size: "1400x550" %>
         <div class="modal-dialog" role="document"></div>
-        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
       </div>
     </div>
     <div class="col-4">
       <button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-11">
-        <%= attachment_image_tag @estate, :property_image_k, format: 'jpeg', size: "400x400" %>
+        <%= attachment_image_tag @estate, :property_image_k, format: 'jpeg', size: "350x350" %>
       </button>
       <div class="modal fade text-center m-3" id="myModal-11" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <%= attachment_image_tag @estate, :property_image_k, format: 'jpeg', size: "1300x650" %>
+        <%= attachment_image_tag @estate, :property_image_k, format: 'jpeg', size: "1400x550" %>
         <div class="modal-dialog" role="document"></div>
-        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
       </div>
     </div>
     <div class="col-4">
       <button type="button" class="btn btn-white" data-toggle="modal" data-target="#myModal-12">
-        <%= attachment_image_tag @estate, :property_image_l, format: 'jpeg', size: "400x400" %>
+        <%= attachment_image_tag @estate, :property_image_l, format: 'jpeg', size: "350x350" %>
       </button>
       <div class="modal fade text-center m-3" id="myModal-12" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <%= attachment_image_tag @estate, :property_image_l, format: 'jpeg', size: "1300x650" %>
+        <%= attachment_image_tag @estate, :property_image_l, format: 'jpeg', size: "1400x550" %>
         <div class="modal-dialog" role="document"></div>
-        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white;">[ X ]</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
       </div>
     </div>
   </div>
