--- a/app/views/customers/estates/top.html.erb
+++ b/app/views/customers/estates/top.html.erb
@@ -35,7 +35,6 @@
       </ul>
     </div>
   </nav>
-
 </header>
 
 <div class="row top justify-content-center" style="padding-top: 130px;">
@@ -67,15 +66,16 @@
     ["東京都練馬区"],
     ["東京都足立区"],
     ["東京都葛飾区"],
-    ["東京都江戸川区"]], {include_blank: "物件住所"} %></div>
+    ["東京都江戸川区"]], {include_blank: "物件住所"} %>
+    </div>
 
   <%= f.select :floor_eq,
   [["1R"],["1K"],["1DK"],["1LDK"],["2K"],["2DK"],["2LDK"],["3DK"],["3LDK"],["4DK"],["4LDK"],["5DK"],["5LDK"]], {include_blank: "間取り"} %>
   </div>
 
   <div class="d-flex justify-content-center pt-3">
-    <div style="padding-right: 15px;"><%= f.number_field :price_gteq, class: "form-control-sm", :placeholder => "賃料下限(半角数字)" %></div> 〜
-    <div style="padding-left: 15px;"><%= f.number_field :price_lteq, class: "form-control-sm", :placeholder => "賃料上限(半角数字)" %></div>
+    <div style="padding-right: 15px;"><%= f.search_field :price_gteq.to_s, class: "form-control-sm", :placeholder => "賃料下限(半角数字)" %></div> 〜
+    <div style="padding-left: 15px;"><%= f.search_field :price_lteq.to_s, class: "form-control-sm", :placeholder => "賃料上限(半角数字)" %></div>
   </div>
   <div class="d-flex justify-content-center pt-3">
     <%= f.search_field :name_or_info_or_address_or_floor_cont, :placeholder => "フリーワード", :size => "46" %>
