--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -14,10 +16,31 @@
  *= require_self
  */
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 @import "bootstrap";
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
 
+#back {
+  position: fixed;
+  right: 5px;
+  bottom: 10px;
+}
+
+#back i {
+  width: 50px;
+  font-size: 40px;
+  color: #FA601A;
+}
+
+#back i:hover {
+  opacity: 0.5;
+}
 
 .info {
   word-break: break-all;
@@ -115,4 +138,16 @@ footer {
   word-break: break-all;
   overflow-wrap: break-word;
   width: 50%;
+}
+
+.carousel-control-prev {
+  width: 24px;
+  height: 24px;
+  padding-top: 330px;
+}
+
+.carousel-control-next {
+  width: 24px;
+  height: 24px;
+  padding-top: 330px;
 }
