--- a/app/views/admins/estates/show.html.erb
+++ b/app/views/admins/estates/show.html.erb
@@ -4,13 +4,13 @@
    <%= @estates.name %>　<%= @estates.room_number %>号室のお問い合わせ一覧
 </div>
 
-<div class="container" style="margin-bottom: 50px;">
+<div class="container" style="margin-bottom: 20px;">
   <% if @researches.present? %>
     <% @researches.reverse.each do |research| %>
-      <div class="card shadow" style="margin-bottom: 50px; height: auto;">
+      <div class="card shadow" style="margin-bottom: 40px; height: auto;">
         <div class="row pt-4 pb-4">
           <div class="col-2 mr-4 text-right" style="font-weight: bold;">カスタマー情報</div>
-          <div class="card col-9">
+          <div class="card col-9" style="border-width: 1px">
             <div class="row">
               <div class="col-3">
                 <div class="name" style="font-weight: bold; ">名前</div>
@@ -27,15 +27,21 @@
             </div>
           </div>
         </div>
+         <div class="row pb-4">
+          <div class="col-2 mr-4 text-right" style="font-weight: bold;">お問い合わせ日時</div>
+          <div class="card col-9">
+            <div><%= research.created_at.strftime('%Y年%m月%d日 %H時%M分') %></div>
+          </div>
+        </div>
         <div class="row pb-4">
           <div class="col-2 mr-4 text-right" style="font-weight: bold;">お問い合わせ内容</div>
-          <div class="card col-9">
+          <div class="card col-9" style="height:60px; overflow:auto;">
             <div><%= research.title %></div>
           </div>
         </div>
         <div class="row">
           <div class="col-2 mr-4"></div>
-          <div class="card col-9 mb-4">
+          <div class="card col-9 mb-4" style="height:150px; overflow:auto;">
             <div><%= research.body %></div>
           </div>
         </div>
