--- a/app/views/admins/researches/index.html.erb
+++ b/app/views/admins/researches/index.html.erb
@@ -4,7 +4,7 @@
   <%= @customer.name %>さんのお問い合わせ物件一覧
 </div>
 
-<div class="container" style="margin-bottom: 50px;">
+<div class="container" style="margin-bottom: 20px;">
   <% if @researches.present? %>
     <% @researches.reverse.each do |research| %>
       <div class="card shadow" style="margin-bottom: 30px; height: auto;">
@@ -31,7 +31,7 @@
                 <td><%= research.estate.floor %></td>
               </tr>
               <tr>
-                <th>お問い合わせした日時</th>
+                <th>お問い合わせ日時</th>
                 <td><%= research.created_at.strftime('%Y年%m月%d日 %H時%M分') %></td>
               </tr>
             </table>
@@ -39,13 +39,13 @@
         </div>
         <div class="row pt-4 pb-4">
           <div class="col-2 mr-5 text-right" style="font-weight: bold;">お問い合わせ内容</div>
-          <div class="card col-9">
+          <div class="card col-9" style="height:60px; overflow:auto;">
             <div><%= research.title %></div>
           </div>
         </div>
         <div class="row">
           <div class="col-2 mr-5"></div>
-          <div class="card col-9 mb-4">
+          <div class="card col-9 mb-4" style="height:150px; overflow:auto;">
             <div><%= research.body %></div>
           </div>
         </div>
