--- a/app/views/customers/customers/show.html.erb
+++ b/app/views/customers/customers/show.html.erb
@@ -85,9 +85,9 @@
 </div>
 
 <div class="text-center" style="padding: 30px 0 50px 0; font-size: 30px; font-weight: bold;">お問い合わせ物件一覧</div>
-<div class="container">
+<div class="container" style="padding-bottom: 20px;">
   <% if @researches.present? %>
-    <% @researches.each do |research| %>
+    <% @researches.reverse.each do |research| %>
       <div class="card shadow" style="margin-bottom: 30px; height: auto;">
         <div class="row">
           <div class="col-md-3 col-sm-12">
@@ -120,13 +120,13 @@
         </div>
         <div class="row pt-4 pb-4">
           <div class="col-2 mr-5 text-right" style="font-weight: bold;">お問い合わせ内容</div>
-          <div class="card col-9">
+          <div class="card col-9" style="height:60px; overflow:auto;">
             <div><%= research.title %></div>
           </div>
         </div>
         <div class="row">
           <div class="col-2 mr-5"></div>
-          <div class="card col-9 mb-4">
+          <div class="card col-9 mb-4" style="height:150px; overflow:auto;">
             <div><%= research.body %></div>
           </div>
         </div>
