--- a/app/views/kaminari/_paginator.html.erb
+++ b/app/views/kaminari/_paginator.html.erb
@@ -1,5 +1,5 @@
 <%= paginator.render do %>
-  <nav text-center>
+  <nav>
     <ul class="pagination" style="justify-content: center; padding: 20px 0 30px 0; font-size: 25px;">
       <%= first_page_tag unless current_page.first? %>
       <%= prev_page_tag unless current_page.first? %>
