--- a/app/views/customers/customers/_header.html.erb
+++ b/app/views/customers/customers/_header.html.erb
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-xs navbar-light">
     <a class="navbar-brand p-0" href="/"><%= image_tag('logo1.jpg') %></a>
 
-    <%= render "layouts/search" %>
+    <%= render "customers/estates/search" %>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" >
       <span class="navbar-toggler-icon"></span>
