非同期通信、検索機能のフリーワードで複数検索

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -152,9 +152,9 @@ footer {
   padding-top: 330px;
 }
 
-#q_address_start {
-  width: 94px;
-}
+// #q_address_start {
+//   width: 120px;
+// }
 
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
