--- a/app/views/customers/customers/show.html.erb
+++ b/app/views/customers/customers/show.html.erb
@@ -1,9 +1,9 @@
 <%= render "customers/customers/header" %>
 
-<div class="text-center" style="padding: 150px 0 30px 0; font-size: 30px; font-weight: bold;">マイページ</div>
+<div class="text-center" style="padding: 130px 0 30px 0; font-size: 30px; font-weight: bold;">マイページ</div>
 <div class="container">
   <div class="card shadow">
-    <div class="row pt-5">
+    <div class="row pt-4">
       <div class="col-3 text-center pt-1" style="font-weight: bold; font-size: 25px;">お名前</div>
       <div class="col-7">
         <div class="card" style="font-size: 25px;">
@@ -19,7 +19,7 @@
           </div>
       </div>
     </div>
-    <div class="row pt-4 pb-5">
+    <div class="row pt-4 pb-4">
       <div class="col-3 text-center" style="font-weight: bold; font-size: 25px;">電話番号</div>
       <div class="col-7">
         <div class="card" style="font-size: 25px;">
@@ -33,19 +33,19 @@
   </div>
 </div>
 
-<div class="text-center pt-5 pb-5" style="font-size: 30px; font-weight: bold;">お気に入り物件一覧</div>
+<div class="text-center" style="padding:80px 0 50px 0; font-size: 30px; font-weight: bold;">お気に入り物件</div>
 <div class="container">
   <% if @favorites.present? %>
     <% @favorites.reverse.each do |favorite| %>
       <div class="card shadow" style="margin-bottom: 30px;">
         <div class="row">
-          <div class="col-md-3 col-sm-12">
-            <%= link_to attachment_image_tag(favorite.estate, :background_image, format: 'jpeg', size: "317x320"), estate_path(favorite), {class: "image-top"} %>
+          <div class="col-md-2 col-sm-12">
+            <%= link_to attachment_image_tag(favorite.estate, :background_image, format: 'jpeg', size: "200x200"), estate_path(favorite.estate), {class: "image-top"} %>
           </div>
-          <div class="col-md-9 col-sm-12 pl-5">
+          <div class="col-md-10 col-sm-12" style="padding-left: 26px;">
             <table class="table table-striped">
               <tr>
-                <th class="th" style="width: 20%;">物件名</th>
+                <th class="th" style="width: 15%;">物件名</th>
                 <td class="name"><%= favorite.estate.name %>　<%= favorite.estate.room_number %>号室</td>
               </tr>
               <tr>
@@ -57,22 +57,10 @@
                 <td>¥<%= favorite.estate.price.to_s(:delimited) %></td>
               </tr>
               <tr>
-                <th>間取り</th>
-                <td><%= favorite.estate.floor %></td>
-              </tr>
-              <tr>
                 <th>お気に入り数</th>
                 <td>
-                  <% if favorite.estate.favorited_by?(current_customer) %>
-                    <%= link_to estate_favorites_path(favorite.estate), method: :delete, style: "font-size:22px" do %>
-                    <i class="fas fa-building"></i><%= favorite.estate.favorites.count %>
-                    <% end %>
-                  <% end %>
+                  <i class="fas fa-building"></i><%= favorite.estate.favorites.count %>
                 </td>
-              </tr>
-              <tr>
-                <th>お気に入りした日時</th>
-                <td><%= favorite.created_at.strftime('%Y年%m月%d日 %H時%M分') %></td>
               </tr>
             </table>
           </div>
@@ -84,19 +72,19 @@
   <% end %>
 </div>
 
-<div class="text-center" style="padding: 30px 0 50px 0; font-size: 30px; font-weight: bold;">お問い合わせ物件一覧</div>
+<div class="text-center" style="padding: 80px 0 50px 0; font-size: 30px; font-weight: bold;">お問い合わせ物件</div>
 <div class="container" style="padding-bottom: 20px;">
   <% if @researches.present? %>
     <% @researches.reverse.each do |research| %>
       <div class="card shadow" style="margin-bottom: 30px; height: auto;">
         <div class="row">
-          <div class="col-md-3 col-sm-12">
-            <%= link_to attachment_image_tag(research.estate, :background_image, format: 'jpeg', size: "317x320"), estate_path(research), {class: "image-top"} %>
+          <div class="col-md-2 col-sm-12">
+            <%= link_to attachment_image_tag(research.estate, :background_image, format: 'jpeg', size: "200x200"), estate_path(research.estate), {class: "image-top"} %>
           </div>
-          <div class="col-md-9 col-sm-12 pl-5">
+          <div class="col-md-10 col-sm-12" style="padding-left: 26px;">
             <table class="table table-striped">
               <tr>
-                <th class="th" style="width: 20%;">物件名</th>
+                <th class="th" style="width: 15%;">物件名</th>
                 <td class="name"><%= research.estate.name %>　<%= research.estate.room_number %>号室</td>
               </tr>
               <tr>
@@ -108,11 +96,7 @@
                 <td>¥<%= research.estate.price.to_s(:delimited) %></td>
               </tr>
               <tr>
-                <th>間取り</th>
-                <td><%= research.estate.floor %></td>
-              </tr>
-              <tr>
-                <th>お問い合わせした日時</th>
+                <th>お問い合わせ日時</th>
                 <td><%= research.created_at.strftime('%Y年%m月%d日 %H時%M分') %></td>
               </tr>
             </table>
