--- a/app/views/customers/estates/top.html.erb
+++ b/app/views/customers/estates/top.html.erb
@@ -78,7 +78,8 @@
     </div>
   </div>
   <div class="search_field d-flex" style="justify-content: center; padding-top: 5px;">
-    <%= f.search_field :name_or_info_or_address_or_floor_cont, :placeholder => "フリーワード", style: "border-width: thin; height: 22px; border-radius: 2px; padding-right: 5px;", :size => "53" %>
+    <%= f.search_field :name_or_info_or_address_or_floor_cont,
+    :placeholder => "フリーワード　(検索例)浴室乾燥機　オートロック", style: "outline-offset: 0; border-width: thin; height: 22px; border-radius: 2px; padding-right: 5px;", :size => "58" %>
   </div>
   <div class="d-flex justify-content-center" style="padding-top: 50px;">
     <%= f.submit "検索", class: "search" %>
