--- a/app/views/customers/favorites/create.js.erb
+++ b/app/views/customers/favorites/create.js.erb
@@ -1,1 +1,1 @@
-$("#estate_<%= estate.id %> .favorite_create").html("<%= j(render "customers/favorites/favorite", estate: estate) %>");
+$(".favorite_<%= @estate.id %>").html("<%= j(render "customers/favorites/favorite", estate: @estate) %>");
