--- a/app/views/customers/customers/_footer.html.erb
+++ b/app/views/customers/customers/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="footer" style="background-color: #18003E;">
-  <nav class="navbar navbar-dark">
+  <nav class="navbar">
     <a class="navbar-brand pr-5" href="/"><%= image_tag('logo.jpg') %></a>
   </nav>
 </footer>
