--- a/app/views/customers/registrations/edit.html.erb
+++ b/app/views/customers/registrations/edit.html.erb
@@ -17,7 +17,8 @@
         <div class="col-4 text-center" style="font-weight: bold; font-size: 25px;"><%= f.label :電話番号 %></div>
         <div class="col-7" style="font-size: 25px;"><%= f.text_field :phone_number, :size => "50" %></div>
       </div>
-      <div class="row justify-content-center pb-5"><%= f.submit "保存", class: "search" %>
+      <div class="row justify-content-center pb-5">
+        <%= f.submit "保存", class: "search" %>
       </div>
     </div>
   </div>
