--- a/app/views/admins/estates/index.html.erb
+++ b/app/views/admins/estates/index.html.erb
@@ -4,13 +4,13 @@
 <div class="container" style="margin-bottom: 20px;">
   <% if @estates.present? %>
     <% @estates.each do |estate| %>
-      <div class="card shadow" style="margin-bottom: 30px;">
+      <div class="card shadow" style="margin-bottom: 30px; padding-bottom: 0;">
         <div class="row">
           <div class="col-md-3 col-sm-12">
             <%= attachment_image_tag estate, :background_image, format: 'jpeg', size: "285x358" %>
           </div>
           <div class="col-md-9 col-sm-12">
-            <table class="table table-striped">
+            <table class="table table-striped" style="margin-bottom: 0;">
               <tr>
                 <th class="th" style="width: 20%;">物件名</th>
                 <td class="name"><%= estate.name %>　<%= estate.room_number %>号室</td>
@@ -59,7 +59,7 @@
   <% else %>
     <div class="text-center pt-5">入稿物件はありません。</div>
   <% end %>
-  <%= paginate @estates %>
 </div>
+<%= paginate @estates %>
 
 <%= render "admins/customers/footer" %>
