--- a/app/views/admins/favorites/index.html.erb
+++ b/app/views/admins/favorites/index.html.erb
@@ -6,14 +6,14 @@
 
 <div class="container" style="margin-bottom: 20px;">
   <% if @favorites.present? %>
-    <% @favorites.reverse.each do |favorite| %>
+    <% @favorites.each do |favorite| %>
       <div class="card shadow" style="margin-bottom: 30px;">
         <div class="row">
-          <div class="col-md-3 col-sm-12">
-            <%= attachment_image_tag favorite.estate, :background_image, format: 'jpeg', size: "317x320" %>
+          <div class="col-md-2 col-sm-12">
+            <%= attachment_image_tag favorite.estate, :background_image, format: 'jpeg', size: "245x245" %>
           </div>
-          <div class="col-md-9 col-sm-12 pl-5">
-            <table class="table table-striped">
+          <div class="col-md-10 col-sm-12" style="padding-left: 70px;">
+            <table class="table table-striped" style="margin-bottom: 0;">
               <tr>
                 <th class="th" style="width: 20%;">物件名</th>
                 <td class="name"><%= favorite.estate.name %>　<%= favorite.estate.room_number %>号室</td>
@@ -43,7 +43,6 @@
     <div class="text-center"><%= @customer.name %>さんがお気に入りされた物件はありません。</div>
   <% end %>
 </div>
-
 <%= paginate @favorites %>
 
 <%= render "admins/customers/footer" %>
