--- a/app/views/admins/researches/index.html.erb
+++ b/app/views/admins/researches/index.html.erb
@@ -6,14 +6,14 @@
 
 <div class="container" style="margin-bottom: 20px;">
   <% if @researches.present? %>
-    <% @researches.reverse.each do |research| %>
-      <div class="card shadow" style="margin-bottom: 30px; height: auto;">
+    <% @researches.each_with_index do |research, i| %>
+      <div class="card shadow" style="margin-bottom: 30px; height: auto; padding-bottom: 0;">
         <div class="row">
-          <div class="col-md-3 col-sm-12">
-            <%= attachment_image_tag research.estate, :background_image, format: 'jpeg', size: "317x320" %>
+          <div class="col-md-2 col-sm-12">
+            <%= attachment_image_tag research.estate, :background_image, format: 'jpeg', size: "245x245" %>
           </div>
-          <div class="col-md-9 col-sm-12 pl-5">
-            <table class="table table-striped">
+          <div class="col-md-10 col-sm-12" style="padding-left: 70px;">
+            <table class="table table-striped" style="margin-bottom: 0;">
               <tr>
                 <th class="th" style="width: 20%;">物件名</th>
                 <td class="name"><%= research.estate.name %>　<%= research.estate.room_number %>号室</td>
@@ -37,21 +37,26 @@
             </table>
           </div>
         </div>
-        <div class="row pt-4 pb-4">
-          <div class="col-2 mr-5 text-right" style="font-weight: bold;">お問い合わせ内容</div>
-          <div class="card col-9" style="height:60px; overflow:auto;">
-            <div><%= research.title %></div>
+
+        <button class="btn btn-outline-primary" data-toggle="collapse" data-target="#key_<%= i %>" aria-expand="false" aria-controls="key_<%= i %>">
+          <div class="col-2">お問い合わせ内容</div>
+        </button>
+        <div class="collapse" id="key_<%= i %>">
+          <div class="row pt-4 pb-4">
+            <div class="col-2 mr-5 text-center" style="font-weight: bold;">タイトル</div>
+            <div class="card col-9" style="height:60px; overflow:auto;">
+              <div><%= research.title %></div>
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-2 mr-5"></div>
-          <div class="card col-9 mb-4" style="height:150px; overflow:auto;">
-            <div><%= research.body %></div>
+          <div class="row">
+            <div class="col-2 mr-5 text-center" style="font-weight: bold;">本文</div>
+            <div class="card col-9 mb-4" style="height:150px; overflow:auto;">
+              <div><%= research.body %></div>
+            </div>
           </div>
         </div>
       </div>
     <% end %>
-
   <% else %>
     <div class="text-center"><%= @customer.name %>さんがお問い合わせされた物件はありません。</div>
   <% end %>
