--- a/app/views/customers/customers/show.html.erb
+++ b/app/views/customers/customers/show.html.erb
@@ -37,13 +37,13 @@
 <div class="container">
   <% if @favorites.present? %>
     <% @favorites.reverse.each do |favorite| %>
-      <div class="card shadow" style="margin-bottom: 30px;">
+      <div class="card shadow" style="margin-bottom: 30px; padding-bottom: 0;">
         <div class="row">
-          <div class="col-md-2 col-sm-12">
-            <%= link_to attachment_image_tag(favorite.estate, :background_image, format: 'jpeg', size: "200x200"), estate_path(favorite.estate), {class: "image-top"} %>
+          <div class="col-md-2 col-sm-12" style= "padding-bottom: 0;">
+            <%= link_to attachment_image_tag(favorite.estate, :background_image, format: 'jpeg', size: "210x210"), estate_path(favorite.estate), {class: "image-top"} %>
           </div>
-          <div class="col-md-10 col-sm-12" style="padding-left: 26px;">
-            <table class="table table-striped">
+          <div class="col-md-10 col-sm-12" style="padding-left: 37px;">
+            <table class="table table-striped" style="margin-bottom: 0;">
               <tr>
                 <th class="th" style="width: 15%;">物件名</th>
                 <td class="name"><%= favorite.estate.name %>　<%= favorite.estate.room_number %>号室</td>
@@ -59,7 +59,11 @@
               <tr>
                 <th>お気に入り数</th>
                 <td>
-                  <i class="fas fa-building"></i><%= favorite.estate.favorites.count %>
+                  <% if favorite.estate.favorited_by?(current_customer) %>
+                    <%= link_to estate_favorites_path(favorite.estate), method: :delete, local: true, style: "font-size: 22px; " do %>
+                    <i class="fas fa-building"></i><%= favorite.estate.favorites.count %>
+                    <% end %>
+                  <% end %>
                 </td>
               </tr>
             </table>
@@ -72,17 +76,17 @@
   <% end %>
 </div>
 
-<div class="text-center" style="padding: 80px 0 50px 0; font-size: 30px; font-weight: bold;">お問い合わせ物件</div>
+<div class="text-center" style="padding: 70px 0 50px 0; font-size: 30px; font-weight: bold;">お問い合わせ物件</div>
 <div class="container" style="padding-bottom: 20px;">
   <% if @researches.present? %>
-    <% @researches.reverse.each do |research| %>
+    <% @researches.each_with_index do |research, i| %>
       <div class="card shadow" style="margin-bottom: 30px; height: auto;">
         <div class="row">
           <div class="col-md-2 col-sm-12">
             <%= link_to attachment_image_tag(research.estate, :background_image, format: 'jpeg', size: "200x200"), estate_path(research.estate), {class: "image-top"} %>
           </div>
           <div class="col-md-10 col-sm-12" style="padding-left: 26px;">
-            <table class="table table-striped">
+            <table class="table table-striped" style="margin-bottom: 0;">
               <tr>
                 <th class="th" style="width: 15%;">物件名</th>
                 <td class="name"><%= research.estate.name %>　<%= research.estate.room_number %>号室</td>
@@ -102,16 +106,22 @@
             </table>
           </div>
         </div>
-        <div class="row pt-4 pb-4">
-          <div class="col-2 mr-5 text-right" style="font-weight: bold;">お問い合わせ内容</div>
-          <div class="card col-9" style="height:60px; overflow:auto;">
-            <div><%= research.title %></div>
+        
+        <button class="btn btn-outline-primary" data-toggle="collapse" data-target="#key_<%= i %>" aria-expand="false" aria-controls="key_<%= i %>">
+          <div class="col-2">お問い合わせ内容</div>
+        </button>
+        <div class="collapse" id="key_<%= i %>">
+          <div class="row pb-4 pt-4">
+            <div class="col-2 mr-4 text-center" style="font-weight: bold;">タイトル</div>
+            <div class="card col-9" style="height:60px; overflow:auto;">
+              <div><%= research.title %></div>
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-2 mr-5"></div>
-          <div class="card col-9 mb-4" style="height:150px; overflow:auto;">
-            <div><%= research.body %></div>
+          <div class="row">
+            <div class="col-2 mr-4 text-center" style="font-weight: bold;">本文</div>
+            <div class="card col-9 mb-4" style="height:150px; overflow:auto;">
+              <div><%= research.body %></div>
+            </div>
           </div>
         </div>
       </div>
