--- a/app/views/customers/estates/top.html.erb
+++ b/app/views/customers/estates/top.html.erb
@@ -1,6 +1,6 @@
 <header class="sticky-top" style="width:100%;">
   <nav class="navbar navbar-expand-xs navbar-light justify-content-end">
-    <button class="navbar-toggler pl-5" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -78,7 +78,7 @@
     </div>
   </div>
   <div class="search_field d-flex" style="justify-content: center; padding-top: 5px;">
-    <%= f.search_field :name_or_info_or_address_or_floor_cont,
+    <%= f.search_field :keyword, value: @keywords,
     :placeholder => "フリーワード　(検索例)浴室乾燥機　オートロック", style: "outline-offset: 0; border-width: thin; height: 22px; border-radius: 2px; padding-right: 5px;", :size => "58" %>
   </div>
   <div class="d-flex justify-content-center" style="padding-top: 50px;">
@@ -96,9 +96,60 @@
   <div class="container">
     <div id="example-3" class="carousel slide" data-ride="carousel" style="width:100%">
       <div class="carousel-inner">
-
-        <%= render "article", estates: @estates %>
-
+        <div class="carousel-item active">
+          <div class="row">
+            <% @estates.first(3).each do |estate| %>
+              <div class="col-4">
+                <div class="card mb-4" style="height:550px;">
+                  <div class="card-img-top">
+                    <%= link_to attachment_image_tag(estate, :background_image, format: 'jpeg', size: "348x200"), estate_path(estate) %>
+                  </div>
+                  <div class="card-body" style="padding: 10px 0 0 8px;">
+                    <div class="card-title">
+                      <%= estate.name %>　<%= estate.room_number %>号室
+                    </div>
+                    <div class="card-text">
+                      <%= estate.address %>
+                    </div><br>
+                    <div>
+                      賃料：¥<%= estate.price.to_s(:delimited) %>　間取り：<%= estate.floor %>
+                    </div><br>
+                  </div>
+                  <div class="card-footer" style="padding-left: 8px;">
+                    <small class="text-muted">投稿日時　<%= estate.created_at.strftime('%Y年%m月%d日 %H時%M分') %></small>
+                  </div>
+                </div>
+              </div>
+            <% end %>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="row">
+            <% @estates.drop(3).each do |estate| %>
+              <div class="col-4">
+                <div class="card mb-4" style="height:550px;">
+                  <div class="card-img-top">
+                    <%= link_to attachment_image_tag(estate, :background_image, format: 'jpeg', size: "348x200"), estate_path(estate) %>
+                  </div>
+                  <div class="card-body" style="padding: 10px 0 0 8px;">
+                    <div class="card-title">
+                      <%= estate.name %>　<%= estate.room_number %>号室
+                    </div>
+                    <div class="card-text">
+                      <%= estate.address %>
+                    </div><br>
+                    <div>
+                      賃料：¥<%= estate.price.to_s(:delimited) %>　間取り：<%= estate.floor %>
+                    </div><br>
+                  </div>
+                  <div class="card-footer" style="padding-left: 8px;">
+                    <small class="text-muted">投稿日時　<%= estate.created_at.strftime('%Y年%m月%d日 %H時%M分') %></small>
+                  </div>
+                </div>
+              </div>
+            <% end %>
+          </div>
+        </div>
         <a class="carousel-control-prev justify-content-start" href="#example-3" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon bg-dark" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
